--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>✨ Emoji Picker</h1>
         <p>Klik emoji untuk menyalin secara otomatis</p>
-        <input type="text" id="searchInput" placeholder="Cari emoji (misal: love, fire)...">
+        <input type="text" id="searchInput" placeholder="Ketik untuk mencari emoji (misal: love, cat, fire)...">
     </header>
 
     <div class="ad-space">
@@ -29,4 +29,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
