--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <p>Klik emoji untuk menyalin secara otomatis</p>
         <input type="text" id="searchInput" placeholder="Ketik untuk mencari emoji (misal: love, cat, fire)...">
     </header>
-
+    
+    <div class="category-wrapper">
+        <button class="cat-btn" onclick="filterByCategory('face')">😀 Wajah</button>
+        <button class="cat-btn" onclick="filterByCategory('love')">❤️ Cinta</button>
+        <button class="cat-btn" onclick="filterByCategory('animal')">🐱 Hewan</button>
+        <button class="cat-btn" onclick="filterByCategory('food')">🍔 Makan</button>
+        <button class="cat-btn" onclick="filterByCategory('hand')">👍 Tangan</button>
+        <button class="cat-btn" onclick="filterByCategory('object')">📦 Benda</button>
+    </div>
+    
     <div class="ad-space">
         <p>Iklan Disini</p>
     </div>
@@ -31,3 +40,4 @@
 </body>
 
 </html>
+
