--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="cat-btn" onclick="filterByCategory('animal')">🐱 Hewan</button>
         <button class="cat-btn" onclick="filterByCategory('food')">🍔 Makan</button>
         <button class="cat-btn" onclick="filterByCategory('hand')">👍 Tangan</button>
-        <button class="cat-btn" onclick="filterByCategory('object')">📦 Benda</button>
+        <button class="cat-btn" onclick="filterByCategory('tool')">📦 Benda</button>
     </div>
     
     <div class="ad-space">
@@ -40,4 +40,5 @@
 </body>
 
 </html>
+
 
