--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="description" content="Cara tercepat salin dan tempel emoji. Koleksi ribuan emoji aesthetic untuk Instagram, TikTok, dan WhatsApp. Klik untuk copy!">
+    <meta name="keywords" content="emoji copy paste, salin emoji, emoji aesthetic, keyboard emoji online">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji Copy Paste - Koleksi Emoji Lengkap</title>
@@ -40,5 +42,6 @@
 </body>
 
 </html>
+
 
 
