--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
     <script src="script.js"></script>
 </body>
 
+    <footer>
+    <p>&copy; 2024 Emoji Picker - Koleksi Emoji Terlengkap</p>
+        <p>
+            <a href="about.html">Tentang Kami</a> | 
+            <a href="privacy.html">Kebijakan Privasi</a>
+        </p>
+    </footer>
+
 </html>
+
 
 
 
