--- a/index.html
+++ b/index.html
@@ -1,53 +1,48 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-    <meta name="description" content="Cara tercepat salin dan tempel emoji. Koleksi ribuan emoji aesthetic untuk Instagram, TikTok, dan WhatsApp. Klik untuk copy!">
-    <meta name="keywords" content="emoji copy paste, salin emoji, emoji aesthetic, keyboard emoji online">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji Copy Paste - Koleksi Emoji Lengkap</title>
+    <title>Emoji Picker - Search, Copy & Paste Emojis Online</title>
+    <meta name="description" content="Quickly find and copy emojis for Instagram, TikTok, and WhatsApp. Discover thousands of aesthetic emojis with our fast search tool.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
         <h1>✨ Emoji Picker</h1>
-        <p>Klik emoji untuk menyalin secara otomatis</p>
-        <input type="text" id="searchInput" placeholder="Ketik untuk mencari emoji (misal: love, cat, fire)...">
+        <p>Your one-click tool to copy and paste emojis</p>
+        <input type="text" id="searchInput" placeholder="Search emojis (e.g., fire, love, cat)...">
     </header>
-    
+
     <div class="category-wrapper">
-        <button class="cat-btn" onclick="filterByCategory('face')">😀 Wajah</button>
-        <button class="cat-btn" onclick="filterByCategory('love')">❤️ Cinta</button>
-        <button class="cat-btn" onclick="filterByCategory('animal')">🐱 Hewan</button>
-        <button class="cat-btn" onclick="filterByCategory('food')">🍔 Makan</button>
-        <button class="cat-btn" onclick="filterByCategory('hand')">👍 Tangan</button>
-        <button class="cat-btn" onclick="filterByCategory('tool')">📦 Benda</button>
-    </div>
-    
-    <div class="ad-space">
-        <p>Iklan Disini</p>
+        <button class="cat-btn" onclick="filterByCategory('face')">😀 Smileys</button>
+        <button class="cat-btn" onclick="filterByCategory('heart')">❤️ Love</button>
+        <button class="cat-btn" onclick="filterByCategory('animal')">🐱 Animals</button>
+        <button class="cat-btn" onclick="filterByCategory('food')">🍔 Food</button>
+        <button class="cat-btn" onclick="filterByCategory('hand')">👍 Hands</button>
+        <button class="cat-btn" onclick="filterByCategory('object')">📦 Objects</button>
+        <button class="cat-btn" onclick="filterByCategory('flag')">🏁 Flags</button>
     </div>
 
-    <main id="emojiContainer">
-        </main>
+    <main id="emojiContainer"></main>
 
-    <div id="toast" class="hidden">Emoji Berhasil Disalin!</div>
+    <div id="toast" class="hidden">Copied to Clipboard!</div>
+
+    <section class="seo-text">
+        <hr>
+        <h2>The Best Way to Copy and Paste Emojis</h2>
+        <p>Our <strong>Emoji Picker</strong> is designed for speed and simplicity. Whether you are looking for aesthetic emojis for your Instagram bio or funny symbols for a TikTok caption, our tool provides a seamless experience. Simply search for a keyword or browse our categories, click on your favorite emoji, and it's ready to be pasted anywhere!</p>
+    </section>
 
     <footer>
-    <p>&copy; 2024 Emoji Picker - Koleksi Emoji Terlengkap</p>
+        <p>&copy; 2026 Emoji Picker - Global Edition</p>
         <p>
-            <a href="about.html">Tentang Kami</a> | 
-            <a href="privacy.html">Kebijakan Privasi</a>
+            <a href="about.html">About Us</a> | 
+            <a href="privacy.html">Privacy Policy</a>
         </p>
     </footer>
 
     <script src="script.js"></script>
 </body>
-
 </html>
-
-
-
-
-
