--- a/about.html
+++ b/about.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Emoji Picker</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        .content-text { max-width: 800px; margin: 40px auto; text-align: left; line-height: 1.6; padding: 0 20px; }
-    </style>
+    <style>.text-container { max-width: 700px; margin: 60px auto; text-align: left; background: white; padding: 40px; border-radius: 20px; }</style>
 </head>
 <body>
-    <header>
-        <h1>Tentang Emoji Picker</h1>
-    </header>
-
-    <main class="content-text">
-        <p>Selamat datang di <strong>Emoji Picker</strong>, solusi satu klik untuk semua kebutuhan ekspresi digital Anda. Kami menyediakan platform yang ringan, cepat, dan mudah digunakan untuk mencari dan menyalin emoji untuk berbagai kebutuhan sosial media seperti Instagram, TikTok, WhatsApp, dan lainnya.</p>
-        
-        <h3>Misi Kami</h3>
-        <p>Misi kami adalah mempermudah pengguna internet dalam mengekspresikan emosi melalui simbol-simbol visual tanpa harus kesulitan mencari di keyboard perangkat yang terbatas. Kami mengumpulkan ribuan emoji berdasarkan standar Unicode terbaru.</p>
-
-        <h3>Kenapa Memilih Kami?</h3>
-        <ul>
-            <li><strong>Sangat Cepat:</strong> Website dioptimalkan untuk performa tinggi.</li>
-            <li><strong>Gratis:</strong> Layanan kami dapat digunakan selamanya tanpa biaya.</li>
-            <li><strong>Pencarian Pintar:</strong> Temukan emoji hanya dengan mengetik kata kunci sederhana.</li>
-        </ul>
-        
-        <p><a href="index.html">← Kembali ke Beranda</a></p>
-    </main>
+    <div class="text-container">
+        <h1>About Emoji Picker</h1>
+        <p>Welcome to <strong>Emoji Picker</strong>, the most convenient way to find and copy emojis for your digital content. Our tool is built for creators, marketers, and social media enthusiasts who want to enhance their messages with perfect symbols.</p>
+        <p>Our mission is to provide a fast, distraction-free environment to discover thousands of emojis based on the latest Unicode standards. This project is free to use and always will be.</p>
+        <br>
+        <a href="index.html" style="color: #0984e3; font-weight: bold;">← Back to Home</a>
+    </div>
 </body>
 </html>
