--- a/privacy.html
+++ b/privacy.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Emoji Picker</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        .content-text { max-width: 800px; margin: 40px auto; text-align: left; line-height: 1.6; padding: 0 20px; }
-    </style>
+    <style>.text-container { max-width: 700px; margin: 60px auto; text-align: left; background: white; padding: 40px; border-radius: 20px; }</style>
 </head>
 <body>
-    <header>
-        <h1>Kebijakan Privasi</h1>
-    </header>
-
-    <main class="content-text">
-        <p>Di Emoji Picker, privasi pengunjung kami sangat penting bagi kami. Dokumen kebijakan privasi ini menguraikan jenis informasi pribadi yang diterima dan dikumpulkan oleh Emoji Picker dan bagaimana informasi tersebut digunakan.</p>
-
-        <h3>Log Files</h3>
-        <p>Seperti banyak situs Web lain, Emoji Picker menggunakan file log. Informasi di dalam file log termasuk alamat protokol internet (IP), jenis browser, Internet Service Provider (ISP), stempel tanggal/waktu, dan halaman perujuk.</p>
-
-        <h3>Cookies dan Web Beacons</h3>
-        <p>Emoji Picker menggunakan cookies untuk menyimpan informasi tentang preferensi pengunjung. Mitra periklanan kami, seperti Google AdSense, mungkin juga menggunakan cookies untuk menayangkan iklan berdasarkan kunjungan pengguna ke situs ini.</p>
-
-        <h3>Persetujuan</h3>
-        <p>Dengan menggunakan situs kami, Anda dengan ini menyetujui kebijakan privasi kami dan menyetujui ketentuan-ketentuannya.</p>
-        
-        <p><a href="index.html">← Kembali ke Beranda</a></p>
-    </main>
+    <div class="text-container">
+        <h1>Privacy Policy</h1>
+        <p>Your privacy is important to us. Emoji Picker does not collect, store, or share any personal information from its visitors.</p>
+        <h3>Cookies</h3>
+        <p>We may use third-party tools such as Google AdSense to display advertisements. These services use cookies to analyze web traffic and serve relevant ads based on your interests.</p>
+        <h3>Agreement</h3>
+        <p>By using our website, you agree to our privacy policy and terms of use.</p>
+        <br>
+        <a href="index.html" style="color: #0984e3; font-weight: bold;">← Back to Home</a>
+    </div>
 </body>
 </html>
